# XuChat-server

./: .gitignore  CMakeLists.txt  README.md  depends.sh  docker-compose.yml
common/: asr.hpp  channel.hpp  data_es.hpp  data_redis.hpp  dms.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mysql.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  utils.hpp
conf/: file_server.conf  friend_server.conf  gateway_server.conf  message_server.conf  speech_server.conf  transmite_server.conf
example/example/rabbitmq/: consume.cc  publish.cc
file/: CMakeLists.txt  dockerfile
file/source/: file_server.cc  file_server.hpp
file/test/: file_client.cc
friend/: CMakeLists.txt  dockerfile
friend/source/: friend_server.cc  friend_server.hpp
friend/test/: friend_client.cc
gateway/: CMakeLists.txt  dockerfile
gateway/source/: connection.hpp  gateway_server.cc  gateway_server.hpp
message/: CMakeLists.txt  dockerfile
message/source/: message_server.cc  message_server.hpp
message/test/: message_client.cc
odb/: chat_session.hxx  chat_session_member.hxx  friend_apply.hxx  message.hxx  relation.hxx  user.hxx
proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmit.proto  transmite.proto  user.proto
speech/: CMakeLists.txt  dockerfile
speech/example/: speech_client.cc
speech/proto/: speech.pb.cc  speech.pb.h
speech/source/: speech_server.cc  speech_server.hpp
speech/src/: speech_server.cc  speech_server.hpp
speech/test/: speech_client.cc
sql/: chat_session.sql  chat_session_member.sql  friend_apply.sql  message.sql  relation.sql  user.sql
test/AMQP/: Makefile  consume  consume.cc  publish  publish.cc
test/brpc/: Makefile  client.cc  main.proto  server.cc
test/dms/: Makefile  test  test.cc
test/es/: Makefile  test  test.cc
test/etcd/: Makefile  discovery.cc  get  get.cc  put  put.cc  registry.cc
test/http/: main.cc
test/json/: test  test.cc
test/odb/: person.hxx  test  test.cc  tmp.cc
test/redis/: main  main.cc
test/speech/: test.cc
test/websocket/: main.cc  test  test.cc
transmite/: CMakeLists.txt  dockerfile
transmite/source/: transmite_server.cc  transmite_server.hpp
transmite/test/: transmite_client.cc  user_client.cc
user/: CMakeLists.txt  dockerfile
user/source/: user_server.cc  user_server.hpp
user/test/: user_client.cc
(+11 files in other folders)
